--- a/.guides/content/-----------------78c1.md
+++ b/.guides/content/-----------------78c1.md
@@ -8,6 +8,4 @@ Here's a table to refer to when we do some challenges in a moment.
 | `if (energy > 30)`       | If energy is greater than 30, show the message "you've got bags of energy" | 
 | `if (energy >= 30)`      | If energy is greater than or equal to 30, show the message "you've got bags of energy" | 
 |  `if (energy < 10)`       | If energy is less than 10, show the message "you're getting low on energy" |
-| `if (energy <= 30)`       | If energy is less than 10, show the message "you're getting low on energy" | 
-
-
+| `if (energy <= 30)`       | If energy is less than or equal to 30, show the message "you're getting low on energy" | 
