--- a/.guides/content/-----------------78c1.md
+++ b/.guides/content/-----------------78c1.md
@@ -4,8 +4,8 @@ Here's a table to refer to when we do some challenges in a moment.
 
 | Code | Spoken |
 | :- | :- |
-| `if (energy != 0)`       | If energy is not equal to 0, show the message "you're still alive" | 
-| `if (energy > 30)`       | If energy is greater than 30, show the message "you've got bags of energy" | 
-| `if (energy >= 30)`      | If energy is greater than or equal to 30, show the message "you've got bags of energy" | 
-|  `if (energy < 10)`       | If energy is less than 10, show the message "you're getting low on energy" |
-| `if (energy <= 30)`       | If energy is less than or equal to 30, show the message "you're getting low on energy" | 
+| `if (energy != 0)`       | If energy is not equal to 0 | 
+| `if (energy > 30)`       | If energy is greater than 30 | 
+| `if (energy >= 30)`      | If energy is greater than or equal to 30 | 
+|  `if (energy < 10)`       | If energy is less than 10 |
+| `if (energy <= 30)`       | If energy is less than or equal to 30 | 
